nginx-load-balancer/nginx.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: nginx-load-balancer-deployment
spec:
  selector:
    matchLabels:
      app: nginx-load-balancer
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx-load-balancer
    spec:
      serviceAccountName: nginx-lb-kubectl
      containers:
      - name: nginx
        imagePullPolicy: Always
        image: bharamicrosystems/nginx:latest
        ports:
        - containerPort: 80
      - name: ingress-service-discovery
        imagePullPolicy: Always
        image: bharamicrosystems/ingress-service-discovery:latest
        ports:
        - containerPort: 8997
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-load-balancer
  labels:
    app: nginx-load-balancer
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: nginx-port
  - port: 8997
    targetPort: 8997
    protocol: TCP
    name: ingress-service-discovery-port
  selector:
    app: nginx-load-balancer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-discovery
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: discovery.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: nginx-load-balancer
            servicePort: 8997
